Fixed spacing and height

--- a/src/components/todoList.scss
+++ b/src/components/todoList.scss
@@ -8,7 +8,7 @@
   margin: 0 2rem;
   /* border: 1px solid white; */
   width: 90%;
-  height: 60%;
+  height: 70%;
   font-family: Arial, Helvetica, sans-serif;
 
   h3 {
